sumo/tests/sumo/pedestrian_model/striping/errors/disconnected_trip_ignore/errors.sumo
Warning: No connection between 'SC_fwd_connector' and 'CW_bwd_connector' found.
Warning: No connection between ':C_w1' and 'CW_bwd_connector' found.
